--- a/templates/main/questions.html
+++ b/templates/main/questions.html
@@ -2,15 +2,16 @@
 
 {%block content %}
 <h2>{{ question.content }}</h2>
-
+<form action="" method="post">
 <div class="row">
     <div class="col-6">
         <div class="collection">
+            {% csrf_token %}
             {% for choice in question.choice_set.all %}
             <div class="collection-item">
 
                 <label>
-                    <input class="with-gap" name="group1" type="radio" />
+                    <input class="with-gap" name="choice" type="radio" value="{{choice.id}}" />
                     <span> {{ choice.choice }}  </span>
                 </label>
             </div>
@@ -25,7 +26,17 @@
             <i class="material-icons right"></i>
           </button>
      </div>       
-
+<div class="row">
+    <div class="red">
+        {% for error in forms.errors %}
+        
+        <li>
+            {{error}}
+        </li>
+        {% endfor %}
+    </div>
 </div>
+</div>
+</form>
 
 {% endblock %}
