--- a/templates/main/questions.html
+++ b/templates/main/questions.html
@@ -9,11 +9,17 @@
             {% csrf_token %}
             {% for choice in question.choice_set.all %}
             <div class="collection-item">
-
-                <label>
-                    <input class="with-gap" name="choice" type="radio" value="{{choice.id}}" />
-                    <span> {{ choice.choice }}  </span>
-                </label>
+                {% if answer %}
+                    {{ choice.choice }}
+                    {% if answer.choice.id == choice.id %}
+                    <i class="material-icons">check</i>
+                    {% endif %}
+                {% else %}
+                    <label>
+                        <input class="with-gap" name="choice" type="radio" value="{{choice.id}}" />
+                        <span> {{ choice.choice }}  </span>
+                    </label>
+                {% endif %}
             </div>
                 
             {% endfor %}
